--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "compromise",
   "description": "Compromise - library of structures with immutable behaviours.",
   "version": "1.0.1",
-  "filename": "compromise.ts",
-  "main": "./dist/src/compromise.min.js",
+  "filename": "index.ts",
+  "main": "./dist/src/index.js",
   "homepage": "https://github.com/draydeer/compromise",
   "repository": {
     "type": "git",
@@ -18,8 +18,13 @@
   },
   "license": "MIT",
   "scripts": {
-    "compile": "tsc -d src/deep-validator.ts --outDir dist/src && uglifyjs dist/src/deep-validator.js -o dist/src/deep-validator.min.js",
+    "compile": "rm -rf dist/ && tsc -d -p . --outDir dist",
     "coveralls": "istanbul cover --root dist/src jasmine-node dist/specs",
     "test": "jasmine-node dist/specs"
+  },
+  "dependencies": {
+    "@types/es6-shim": "^0.31.34",
+    "@types/jasmine": "^2.5.53",
+    "@types/node": "^8.0.8"
   }
 }
