renames lib functions, continues readme.md

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "compile": "rm -rf dist/ && tsc -d -p . --outDir dist",
+    "build": "rm -rf dist/ && tsc -d -p . --outDir dist",
     "coveralls": "istanbul cover --root dist/src jasmine-node dist/specs",
     "test": "jasmine-node dist/specs"
   },
