--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "invary",
-  "description": "A small library of simple immutable data structures like Array and Object.",
-  "version": "1.0.6",
+  "description": "A small library of simple immutable data structures such as Array and Object.",
+  "version": "1.0.7",
   "filename": "index.ts",
   "main": "./dist/src/index.js",
   "homepage": "https://github.com/draydeer/invary",
@@ -13,18 +13,19 @@
     "node": ">= 0.9"
   },
   "devDependencies": {
-    "istanbul": "^0.4.4",
-    "jasmine-node": "^1.14.5"
+    "@types/jasmine": "2.5.53",
+    "istanbul": "0.4.4",
+    "jasmine-node": "1.14.5",
+    "typescript": "2.6.2"
   },
   "license": "MIT",
   "scripts": {
-    "build": "rm -rf dist/ && tsc -d -p . --outDir dist",
-    "coveralls": "istanbul cover --root dist/src jasmine-node dist/specs",
-    "test": "jasmine-node dist/specs && NODE_ENV=dev jasmine-node dist/specs"
+    "build": "rm -rf dist/ && node ./node_modules/.bin/tsc -d -p . --outDir dist",
+    "coveralls": "npm run build && node ./node_modules/.bin/istanbul cover --root dist/src jasmine-node dist/spec",
+    "test": "npm run build && node ./node_modules/.bin/jasmine-node dist/spec && NODE_ENV=dev node ./node_modules/.bin/jasmine-node dist/spec"
   },
   "dependencies": {
-    "@types/es6-shim": "^0.31.34",
-    "@types/jasmine": "^2.5.53",
-    "@types/node": "^8.0.8"
+    "@types/es6-shim": "0.31.34",
+    "@types/node": "8.0.8"
   }
 }
