--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "emitDecoratorMetadata": false,
+        "experimentalDecorators": true,
         "module": "commonjs",
         "outDir": "dist",
         "target": "ES5",
@@ -12,8 +13,6 @@
     "exclude": [
         "coverage",
         "dist",
-        "node_modules",
-        "old",
-        "typings"
+        "node_modules"
     ]
 }
