--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "invary",
   "description": "A small library of simple immutable data structures such as Array and Object.",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "filename": "index.ts",
   "main": "./dist/src/index.js",
   "homepage": "https://github.com/draydeer/invary",
@@ -12,26 +12,24 @@
   "engines": {
     "node": ">= 0.9"
   },
+  "license": "MIT",
+  "scripts": {
+    "benchmark": "npm run build && node ./dist/benchmarks/arr_obj",
+    "build": "rm -rf dist/ && node ./node_modules/.bin/tsc -d -p . --outDir dist",
+    "coveralls": "npm run build && node ./node_modules/.bin/istanbul cover --root dist/src jasmine-node dist/spec",
+    "test": "npm run build && node $NODE_DEBUG_OPTION ./node_modules/.bin/jasmine-node dist/spec"
+  },
+  "keywords": [
+    "immutable"
+  ],
   "devDependencies": {
     "@types/jasmine": "2.5.53",
     "istanbul": "0.4.4",
     "jasmine-node": "1.14.5",
     "typescript": "2.6.2"
   },
-  "license": "MIT",
-  "scripts": {
-    "benchmark": "npm run build && node ./dist/benchmarks/arr_obj",
-    "build": "rm -rf dist/ && node ./node_modules/.bin/tsc -d -p . --outDir dist",
-    "coveralls": "npm run build && node ./node_modules/.bin/istanbul cover --root dist/src jasmine-node dist/spec",
-    "test": "npm run build && node ./node_modules/.bin/jasmine-node dist/spec"
-  },
   "dependencies": {
     "@types/es6-shim": "0.31.34",
-    "@types/node": "8.0.8",
-    "crio": "^5.0.0",
-    "fast.js": "^0.1.1",
-    "immutable": "^3.8.2",
-    "mori": "^0.3.2",
-    "seamless-immutable": "^7.1.2"
+    "@types/node": "8.0.8"
   }
 }
